--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
+  "CosmosDB": {
+    "databaseId": "ToDoList",
+    "collectionId": "Items"
+  },
   "AllowedHosts": "*"
 }
