--- a/labs-intro-azure-data.csproj
+++ b/labs-intro-azure-data.csproj
@@ -1,15 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <RootNamespace>labs_intro_azure_data</RootNamespace>
+    <RootNamespace>Soat.Masterclass.Labs</RootNamespace>
+    <UserSecretsId>3bd8e004-5603-47ff-8dd7-b29c915dccee</UserSecretsId>
   </PropertyGroup>
-
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.4.0"/>
   </ItemGroup>
-
 </Project>
