--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
     "databaseId": "ToDoList",
     "collectionId": "Items"
   },
+  "Storage": {
+    "container": "masterclass"
+  },
   "AllowedHosts": "*"
 }
