--- a/labs-intro-azure-data.csproj
+++ b/labs-intro-azure-data.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.4.0"/>
+    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3"/>
   </ItemGroup>
 </Project>
