--- a/labs-intro-azure-data.csproj
+++ b/labs-intro-azure-data.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.4.0"/>
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4"/>
   </ItemGroup>
 </Project>
